--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
     padding: 100px;
     margin: 100px;
     align-items: center;
-    background-color: dimgray;
+    background-image: linear-gradient(100deg, #B2BABB , #1B2631 );
     z-index: 4;
     
     
@@ -61,7 +61,7 @@ input::placeholder {
     border-radius: 25px;
     
     padding: 35px;
-    padding-top: 100px;
+    padding-top: 50px;
     
 }
 button{
@@ -75,6 +75,10 @@ button{
 }
 button:hover{
     background-color:#424949;
+}
+
+h3{
+    font-size: arial;
 }
 
 
