change color div

--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ input::placeholder {
 }
 
 .quadrado {
-    background-color:grey;
+    background-color:#ABB2B9;
     border-radius: 25px;
     
     padding: 35px;
