--- a/style.css
+++ b/style.css
@@ -2,40 +2,43 @@ body{
     display: flex;
     justify-content: center;
     flex-direction: column;
-    gap: 10px;
     height: 300px;
-    padding: 100px;
-    margin: 100px;
+    padding: 0;
+    margin: 0;
     align-items: center;
-    background-image: linear-gradient(100deg, #B2BABB , #1B2631 );
+
+
+    background-image: linear-gradient(100deg, #B2BABB , #1B2631) ;
+    min-height: 100vh;
+    background-size: cover;
+    background-repeat: no-repeat;
     z-index: 4;
     
     
-    
-}
+}    
+
+
 
 input{
     font-family: "Arial", sans-serif;
     border-radius: 25px;
-    align-items: center;
     outline: 0;
     border: 0;
    
 }
 
 input::placeholder {
-    font-family: "Arial", sans-serif; /* Define a família de fontes para o placeholder */
-    font-size: 8px; /* Define o tamanho da fonte para o placeholder */
-    font-weight: normal; /* Define o peso da fonte para o placeholder */
-    color: #999; /*Define a cor do texto do placeholder */
-}
+    font-family: "Arial", sans-serif; 
+    font-size: 8px; 
+    font-weight: normal; 
+    color: #999; 
+
+    }
 
 
-#email {
-    font-family: "Arial", sans-serif;
-    font-size: 8px;
+
     
-}
+
 
 #eye {
     font-size: 10px;
@@ -48,7 +51,6 @@ input::placeholder {
 }
 
 .password {
-    width: 46%;
     position: relative;
     display:inline-flex;
     align-items: center;
@@ -69,7 +71,7 @@ button{
     color: white;
     position: absolute;
     padding: 5px;
-   width: 21%;
+   width: 158px;
    border: 0;
    border-radius: 5px;
 }
@@ -80,6 +82,12 @@ button:hover{
 h3{
     font-size: arial;
 }
+
+
+
+
+   
+ 
 
 
 
