--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
     min-height: 100vh;
     background-size: cover;
     background-repeat: no-repeat;
-    z-index: 4;
+    
     
     
 }    
@@ -29,7 +29,7 @@ input{
 
 input::placeholder {
     font-family: "Arial", sans-serif; 
-    font-size: 8px; 
+    font-size: 10px; 
     font-weight: normal; 
     color: #999; 
 
@@ -47,14 +47,14 @@ input::placeholder {
     left :147px;
     top: 25%;
     width: 50px;
-    z-index: 1;
+  
 }
 
 .password {
     position: relative;
     display:inline-flex;
     align-items: center;
-    z-index: 2;
+    
 
 }
 
@@ -79,9 +79,22 @@ button:hover{
     background-color:#424949;
 }
 
-h3{
-    font-size: arial;
+
+@media (min-width: 800px) and (max-width: 1300px) {
+    button {
+        margin-left: 6px;
+    }
+    #eye {
+        font-size: 12px;
+    }
+
+    input::placeholder {
+        font-size: 12px;
+    }
 }
+
+
+
 
 
 
